@@ -4,10 +4,12 @@ WORKDIR /app
 COPY build.gradle.kts .
 COPY settings.gradle .
 COPY src ./src
+# без тестов
 RUN gradle clean build --no-daemon -DskipTests
+# RUN gradle build --no-daemon для запуска с тестами
 
 FROM gradle:jdk17-ubi-minimal
 WORKDIR /app
 COPY --from=builder /app/build/libs/killhimka-0.0.1-SNAPSHOT.jar app.jar
 EXPOSE 8085
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/app/killhimka-0.0.1-SNAPSHOT.jar"]
